# Excel-Template-Mapper

./: .gitignore  COLUMN_DETAILS_ENHANCEMENT.md  COLUMN_DETAILS_GUIDE.md  COLUMN_DETAILS_QUICK_REFERENCE.md  COLUMN_DETAILS_VISUAL_GUIDE.md  FEATURE_DELIVERY_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  README.md  RUNTIME_FIXES_SUMMARY.md  app_psg.py  install.sh  pyproject.toml  requirements.txt  run_local.sh  setup.py
.github/workflows/: build-release.yml
docker/: DOCKER_SETUP_GUIDE.md  Dockerfile  Dockerfile.gui  Dockerfile.gui.venv  README.md  compose.debug.yaml  compose.yaml  run_docker_gui.sh  setup_gui.sh
src/: README.md  __init__.py  _version.py
src/core/: __init__.py  engine.py  models.py  utils.py
src/layouts/: __init__.py  advanced_format_builder.py  bottom_row.py  details_toggle.py  details_widget.py  sheet_row.py  source_label_row.py  top_file_row.py
src/widgets/: __init__.py  main_window.py  mapping_table.py  preview_dialog.py  transform_button.py
test/: README.md  pre_commit.py  run_all_tests.py  setup_dev.py  test_docker.py  test_imports.py  test_packaging.py  test_type_hints.py  update_requirements.py  validate_project.py
