[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-template-mapper"
version = "1.0.0"
description = "A GUI application for mapping and transforming Excel templates"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Excel Template Mapper Team", email = "support@templatemapper.com"}
]
maintainers = [
    {name = "Excel Template Mapper Team", email = "support@templatemapper.com"}
]
keywords = ["excel", "template", "mapping", "gui", "pyside6", "data-transformation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Utilities",
    "Environment :: X11 Applications :: Qt",
    "Framework :: Qt",
]
requires-python = ">=3.9"
dependencies = [
    "et_xmlfile>=2.0.0",
    "GitPython>=3.1.0",
    "openpyxl>=3.1.0",
    "PySide6>=6.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=1.0",
    "pre-commit>=2.0",
]
build = [
    "pyinstaller>=5.0",
    "setuptools>=45",
    "wheel",
    "build>=0.8",
]
test = [
    "pytest>=7.0",
    "pytest-qt>=4.0", 
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
]

[project.urls]
Homepage = "https://github.com/nickplucker/Excel-Template-Mapper"
Repository = "https://github.com/nickplucker/Excel-Template-Mapper.git"
Issues = "https://github.com/nickplucker/Excel-Template-Mapper/issues"
Documentation = "https://github.com/nickplucker/Excel-Template-Mapper#readme"

[project.scripts]
excel-template-mapper = "app_psg:main"

[project.gui-scripts]
excel-template-mapper-gui = "app_psg:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

# Removed dynamic configuration since we're using static values

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.json", "*.txt", "*.md"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
show_error_codes = true
strict = false

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
]